<resources>
    <string name="app_name">Smart Gardener</string>
    <string name="daily_option">DAILY</string>
    <string name="custom_option">CUSTOM</string>
    <string name="advance_option">ADVANCE</string>
    <string name="save_option">SAVE</string>
    <string name="inst_water_option">WATER NOW</string>
    <string name="save_messg">The given configuration is save successfully!!!</string>
    <string name="basic_fet_title">DAILY</string>
    <string name="basic_fet_message">Choose this option to water plants daily twice.</string>
    <string name="basic_fet_morning_time">BasicMorning</string>
    <string name="basic_fet_evening_time">BasicEvening</string>
    <string name="basic_fet_mor_hr">BasicFetMornHr</string>
    <string name="basic_fet_mor_min">BasicFetMornMin</string>
    <string name="basic_fet_eve_hr">BasicFetEveHr</string>
    <string name="basic_fet_eve_min">BasicFetEveMin</string>
    <string name="cust_fet_morning_time">CustMorning</string>
    <string name="cust_fet_evening_time">CustEvening</string>
    <string name="cust_fet_mor_hr">CustFetMornHr</string>
    <string name="cust_fet_mor_min">CustFetMornMin</string>
    <string name="cust_fet_eve_hr">CustFetEveHr</string>
    <string name="cust_fet_eve_min">CustFetEveMin</string>
    <string name="cust_fet_days_of_week">DaysOfWeek</string>
    <string name="cust_fet_days">SUNDAY,MONDAY,TUESDAY,WEDNESDAY,THURSDAY,FRIDAY,SATURDAY</string>
    <string name="mor">Morning</string>
    <string name="eve">Evening</string>
    <string name="radio_daily">RadioDaily</string>
</resources>
